# Test_task_for_WG_Capitals

./: .env.dev  Dockerfile  Dockerfile.yml  Hello_World.pyproj  Hello_World.sln  README.md  README_task.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
.github/workflows/: test_app.yml
Hello_World/: Dockerfile  __init__.py  requirements.txt  settings.py  urls.py  wsgi.py
app/: views.py
app/templates/app/: about.html  contact.html  hello.html  layout.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
hello_world/app/: views.py
hello_world/app/static/css/: styles.css
hello_world/app/templates/: index.html
hello_world/hello_world/: settings.py  urls.py
nginx/: nginx.conf
