[tool.poetry]
name = "test-task-for-wg-capitals"
version = "0.1.0"
description = "Test task for company WG Capitals"
authors = ["KorolevDP <korolevdp-228@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
django = "^5.0.2"
invoke = "^2.2.0"
psycopg2-binary = "^2.9.9"
tomli = "^2.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
